no negative z-index to fix support stripe image weirdness

--- a/app/styles/nypr-ui/_support-stripe.scss
+++ b/app/styles/nypr-ui/_support-stripe.scss
@@ -1,3 +1,5 @@
+@import "z-index";
+
 .support-stripe {
   display: flex;
   position: relative;
@@ -11,7 +13,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  z-index: $zIndex--supportStripeImg;
 
   background-position: center;
   background-size: cover;
@@ -37,6 +39,8 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: flex-end;
+
+  z-index: $zIndex--supportStripe;
 
   @include mq($middle-narrow-and-up) {
     flex-basis: 35%;
